--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -2,8 +2,7 @@
   display: flex;
   align-items: center;
   width: 100%;
-  justify-content: space-between;
-  padding: 20px;
   background-color: white;
   box-sizing: border-box;
+  align-items: stretch;
 }
